--- a/themes/vue/layout/search-page.ejs
+++ b/themes/vue/layout/search-page.ejs
@@ -3,12 +3,12 @@
     <input
       class="search-query"
       v-model="search"
-      placeholder="Search Vue.js"
+      placeholder="Sök Vue.js"
     >
     <div class="search-footer">
       <p>
         <template v-if="totalResults">
-          <strong>{{ totalResults }} results</strong> found in {{ queryTime }}ms
+          <strong>{{ totalResults }} resultat</strong> hittades inom {{ queryTime }}ms
         </template>
       </p>
       <a target="_blank" href="https://www.algolia.com/">
@@ -25,7 +25,7 @@
     ></search-result>
   </template>
 
-  <p v-else>No results were found.</p>
+  <p v-else>Inga resultat hittades.</p>
 
   <div ref="infiniteScrollAnchor"></div>
 
