--- a/themes/vue/layout/index.ejs
+++ b/themes/vue/layout/index.ejs
@@ -13,13 +13,13 @@
     </div><div class="right">
       <h2 class="vue">Vue.js</h2>
       <h1>
-        Det progressiva<br>JavaScript-ramverk
+        Det Progressiva<br>JavaScript-Ramverket
       </h1>
       <p>
         <a id="modal-player" class="button has-icon" href="javascript:;">
           <%- partial('icons/play') %>
           VARFÖR VUE.JS?</a>
-        <a class="button white" href="<%- url_for("/v2/guide/") %>">KOMMA I GÅNG</a>
+        <a class="button white" href="<%- url_for("/v2/guide/") %>">KOM I GÅNG</a>
         <a class="button gray has-icon" href="https://github.com/vuejs/vue" target="_blank">
           <%- partial('icons/github-dark') %>
           GITHUB</a>
@@ -29,7 +29,7 @@
 </div>
 
 <div id="special-sponsor">
-  <h3>Speciell sponsor</h3>
+  <h3>Speciell Sponsor</h3>
   <% var specialSponsor = theme.special_sponsors[0]; %>
   <a href="<%- specialSponsor.url %>" target="_blank">
     <img src="<%- url_for(`/images/${specialSponsor.img}`) %>" style="width:160px" alt="Code.xyz Logo">
@@ -47,15 +47,15 @@
 
     <div class="point">
       <h2>Mångsidigt</h2>
-      <p>Ett ekosystem som kan stegvist adopteras och fungerar som bibliotek lika bra som fullt utrustrat ramverk.</p>
+      <p>Ett ekosystem som stegvist kan adopteras och fungerar som bibliotek lika bra som fullt utrustrat ramverk.</p>
     </div>
 
     <div class="point">
       <h2>Effektivt</h2>
       <p>
-        20KB min+gzip körning<br>
-        Otroligt snabbt Virtual DOM<br>
-        Minimal optimering behövs
+        20KB min+gzip Runtime<br>
+        Otroligt Snabb Virtual DOM<br>
+        Minimala Optimeringsbehov
       </p>
     </div>
   </div>
@@ -69,7 +69,7 @@
 
 <div id="news">
   <div class="inner">
-    <h3><label for="member_email">Prenumera på vårt veckovisa nyhetsbrev</label></h3>
+    <h3><label for="member_email">Prenumerera på vårt nyhetsbrev varje vecka</label></h3>
     <form
       class="newsletter-form"
       id="revue-form"
@@ -90,7 +90,7 @@
       <input
         class="button newsletter-button"
         type="submit"
-        value="Prenumera"
+        value="Prenumerera"
         name="member[subscribe]"
         id="member_submit"
       >
@@ -120,7 +120,7 @@
 <div id="video-modal" class="modal">
   <div class="video-space" style="padding: 56.25% 0 0 0; position: relative;"><iframe src="https://player.vimeo.com/video/247494684" style="height: 100%; left: 0; position: absolute; top: 0; width: 100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
   </div><script src="https://player.vimeo.com/api/player.js"></script>
-  <p class="modal-text">Video av <a href="https://www.vuemastery.com" target="_blank" rel="noopener" title="Vue.js kurser på Vue Mastery">Vue Mastery</a>. Titta på Vue Mastery’s gratis <a href="https://www.vuemastery.com/courses/intro-to-vue-js/vue-instance/" target="_blank" rel="noopener" title="Vue.js Courses on Vue Mastery">Introduktion till Vue kurs</a>.
+  <p class="modal-text">Video av <a href="https://www.vuemastery.com" target="_blank" rel="noopener" title="Vue.js kurser på Vue Mastery">Vue Mastery</a>. Titta på Vue Mastery’s gratis <a href="https://www.vuemastery.com/courses/intro-to-vue-js/vue-instance/" target="_blank" rel="noopener" title="Vue.js Courses on Vue Mastery">Introduktion till Vue-kurs</a>.
   </p>
 </div>
 
