--- a/themes/vue/layout/page.ejs
+++ b/themes/vue/layout/page.ejs
@@ -44,7 +44,7 @@
     <%_ if (!page.sponsors) { _%>
       <%- partial('partials/ad-text') %>
     <%_ } _%>
-    Hittade ett misstag eller vill bara bidra till dokumentationen?
+    Har du hittat ett misstag eller vill du bidra till dokumentationen?
     <a href="https://github.com/vuejs/vuejs.org/blob/master/src/<%- page.path.replace(/\.html$/, '.md') %>" target="_blank">
       Redigera den här sidan på GitHub!
     </a>
