--- a/themes/vue/layout/sponsors-page.ejs
+++ b/themes/vue/layout/sponsors-page.ejs
@@ -1,8 +1,8 @@
-<h1>Sponsra Vue.js utveckling</h1>
+<h1>Sponsra Utvecklingen av Vue.js</h1>
 
 <p>
-Vue.js är ett MIT-licensierade projekt som har helt öppen källkod och är helt gratis att använda.
-Dock mängden ansträngning som behövs för att underhålla nuvarande och utveckla nya funktioner till projektet inte kan upprätthållas utan ordentligt financiering.
+Vue.js är ett MIT-licensierat öppen källkodsprojekt som är helt gratis att använda.
+Mängden jobb som behövs för att underhålla och utveckla nya funktioner kan dock ej upprätthållas utan ekonomiskt stöd.
 </p>
 
 <h2 id="One-time-Donations">Engångsdonationer</h2>
@@ -54,10 +54,10 @@ window.addEventListener('hashchange', function () {
 })
 </script>
 
-<h2 id="Recurring-Pledges">Återkommande löften</h2>
+<h2 id="Recurring-Pledges">Återkommande Löften</h2>
 
 <p>
-Återkommande löften inkluderar extraförmåner t.ex att ha ditt namn stå i vår GitHub repository, eller att ha din företagslogotyp placerad på denna webbsida.
+Återkommande löften inkluderar extraförmåner som t.ex att få ditt namn listat i vårt GitHub repository, eller att ha din företagslogotyp placerad på denna webbsida.
 </p>
 
 <ul>
@@ -65,13 +65,13 @@ window.addEventListener('hashchange', function () {
     <a href="https://www.patreon.com/evanyou" target="_blank">Bli sponsor via Patreon</a> (stöttar direkt Evan You's heltidsarbete på Vue)
   </li>
   <li>
-    <a href="https://opencollective.com/vuejs">Bli sponsor via OpenCollective</a> (går in i en fund med tydliga kostnadsmodeller som stöttar samhällshändelser och -ansträngningar)
+    <a href="https://opencollective.com/vuejs">Bli sponsor via OpenCollective</a> (går till en fond med tydliga kostnadsmodeller som stöttar gemenskapsinitiativ och sammankomster)
   </li>
 </ul>
 
-<h2>Aktuella premium sponsorer:</h2>
+<h2>Aktuella premiumsponsorer:</h2>
 
-<h3>Speciella sponsorer</h3>
+<h3>Speciella Sponsorer</h3>
 
 <p class="platinum">
 <%_ for (const sponsor of theme.special_sponsors) {_%>
@@ -101,7 +101,7 @@ window.addEventListener('hashchange', function () {
 <%_ } _%>
 </p>
 
-<h3>Speciella sponsorer (Kina)</h3>
+<h3>Speciella Sponsorer (Kina)</h3>
 
 <p class="platinum">
 <%_ for (const sponsor of theme.platinum_sponsors_china) {_%>
@@ -152,9 +152,9 @@ window.addEventListener('hashchange', function () {
 </p>
 
 <p>
-Om du driver ett företag och använder Vue för en inkomst-genererande produkt är det vettigt att sponsra Vue-utveckling: det försäkrar att projekten, som din produkt är beroende av, håller sig hälsosam och underhållen.
+Om du driver ett företag och använder Vue för en inkomstdrivande produkt är det vettigt att sponsra Vue-utvecklingen: det försäkrar att projektet, som din produkt är beroende av, håller sig hälsosam och underhållen.
 </p>
 
 <p>
-Om du är en enskild användare och njuter av produktiviteten som Vue ger, tänk över att donera som uppskattningstecken - t.ex genom att bjuda mig på kaffe då och då :)
+Om du är en enskild användare och njuter av produktiviteten som Vue ger, överväg då att donera som ett tecken på uppskattning - som t.ex. att bjuda mig på kaffe då och då :)
 </p>
