--- a/themes/vue/layout/partials/toc.ejs
+++ b/themes/vue/layout/partials/toc.ejs
@@ -3,19 +3,19 @@
     <% var fileName = p.path.replace(/^.+?\/([\w-]+)\.html/, '$1') %>
     <% if (type === 'guide') { %>
       <% if (fileName === 'installation') { %>
-        <li><h3>Essentials</h3></li>
+        <li><h3>Grundläggande</h3></li>
       <% } %>
       <% if (fileName === 'components-registration') { %>
-        <li><h3>Components In-Depth</h3></li>
+        <li><h3>Komponenter Fördjupat</h3></li>
       <% } %>
       <% if (fileName === 'transitions') { %>
-        <li><h3>Transitions & Animation</h3></li>
+        <li><h3>Transitioner & Animationer</h3></li>
       <% } %>
       <% if (fileName === 'mixins') { %>
-        <li><h3>Reusability & Composition</h3></li>
+        <li><h3>Återanvändbarhet & Composition</h3></li>
       <% } %>
       <% if (fileName === 'single-file-components') { %>
-        <li><h3>Tooling</h3></li>
+        <li><h3>Verktyg</h3></li>
       <% } %>
       <% if (fileName === 'routing') { %>
         <li><h3>Scaling Up</h3></li>
@@ -24,7 +24,7 @@
         <li><h3>Internals</h3></li>
       <% } %>
       <% if (fileName === 'migration') { %>
-        <li><h3>Migrating</h3></li>
+        <li><h3>Flyttning</h3></li>
       <% } %>
       <% if (fileName === 'comparison') { %>
         <li><h3>Meta</h3></li>
