--- a/themes/vue/layout/partials/ecosystem_dropdown.ejs
+++ b/themes/vue/layout/partials/ecosystem_dropdown.ejs
@@ -23,17 +23,17 @@
     </ul></li>
     <li><h4>Nyheter</h4></li>
     <li><ul>
-      <li><a href="https://news.vuejs.org" class="nav-link" target="_blank">Veckovis nyheter</a></li>
+      <li><a href="https://news.vuejs.org" class="nav-link" target="_blank">Veckovisa nyheter</a></li>
       <li><a href="https://github.com/vuejs/vue/projects/6" class="nav-link" target="_blank">Vägkarta</a></li>
       <li><a href="https://events.vuejs.org/" class="nav-link" target="_blank">Evenemang</a></li>
       <li><a href="https://twitter.com/vuejs" class="nav-link" target="_blank">Twitter</a></li>
       <li><a href="https://medium.com/the-vue-point" class="nav-link" target="_blank">Blogg</a></li>
       <li><a href="https://vuejobs.com/?ref=vuejs" class="nav-link" target="_blank">Jobb</a></li>
-      <li><a href="https://dev.to/t/vue" class="nav-link" target="_blank">DEV Gemenskap</a></li>
+      <li><a href="https://dev.to/t/vue" class="nav-link" target="_blank">DEV gemenskap</a></li>
     </ul></li>
     <li><h4>Resurslistor</h4></li>
     <li><ul>
-      <li><a href="https://github.com/vuejs" class="nav-link" target="_blank">Officiella Repos</a></li>
+      <li><a href="https://github.com/vuejs" class="nav-link" target="_blank">Officiella repos</a></li>
       <li><a href="https://curated.vuejs.org/" class="nav-link" target="_blank">Vue Curated</a></li>
       <li><a href="https://github.com/vuejs/awesome-vue" class="nav-link" target="_blank">Awesome Vue</a></li>
     </ul></li>
