--- a/themes/vue/layout/partials/sidebar.ejs
+++ b/themes/vue/layout/partials/sidebar.ejs
@@ -9,10 +9,10 @@
         <h2>
           <% titles = {
             api: 'API',
-            examples: 'Examples',
+            examples: 'Exempel',
             guide: 'Guide',
-            cookbook: 'Cookbook<sup class="beta">beta</sup>',
-            'style-guide': 'Style Guide<sup class="beta">beta</sup>'
+            cookbook: 'Kokbok<sup class="beta">beta</sup>',
+            'style-guide': 'Stilguide<sup class="beta">beta</sup>'
           } %>
           <%- titles[type] %>
           <% if (['cookbook', 'style-guide'].indexOf(type) === -1) { %>
