--- a/themes/vue/layout/sponsors-page.ejs
+++ b/themes/vue/layout/sponsors-page.ejs
@@ -1,4 +1,4 @@
-<h1>Sponsra Utvecklingen av Vue.js</h1>
+<h1>Sponsra utvecklingen av Vue.js</h1>
 
 <p>
 Vue.js är ett MIT-licensierat öppen källkodsprojekt som är helt gratis att använda.
@@ -54,7 +54,7 @@ window.addEventListener('hashchange', function () {
 })
 </script>
 
-<h2 id="Recurring-Pledges">Återkommande Löften</h2>
+<h2 id="Recurring-Pledges">Återkommande löften</h2>
 
 <p>
 Återkommande löften inkluderar extraförmåner som t.ex att få ditt namn listat i vårt GitHub repository, eller att ha din företagslogotyp placerad på denna webbsida.
@@ -71,7 +71,7 @@ window.addEventListener('hashchange', function () {
 
 <h2>Aktuella premiumsponsorer:</h2>
 
-<h3>Speciella Sponsorer</h3>
+<h3>Speciella sponsorer</h3>
 
 <p class="platinum">
 <%_ for (const sponsor of theme.special_sponsors) {_%>
@@ -81,7 +81,7 @@ window.addEventListener('hashchange', function () {
 <%_ } _%>
 </p>
 
-<h3>Platinum</h3>
+<h3>Platina</h3>
 
 <p class="platinum">
 <%_ for (const sponsor of theme.platinum_sponsors) {_%>
@@ -101,7 +101,7 @@ window.addEventListener('hashchange', function () {
 <%_ } _%>
 </p>
 
-<h3>Speciella Sponsorer (Kina)</h3>
+<h3>Speciella sponsorer (Kina)</h3>
 
 <p class="platinum">
 <%_ for (const sponsor of theme.platinum_sponsors_china) {_%>
