--- a/themes/vue/layout/index.ejs
+++ b/themes/vue/layout/index.ejs
@@ -13,7 +13,7 @@
     </div><div class="right">
       <h2 class="vue">Vue.js</h2>
       <h1>
-        Det Progressiva<br>JavaScript-Ramverket
+        Det progressiva<br>JavaScript-ramverket
       </h1>
       <p>
         <a id="modal-player" class="button has-icon" href="javascript:;">
@@ -29,7 +29,7 @@
 </div>
 
 <div id="special-sponsor">
-  <h3>Speciell Sponsor</h3>
+  <h3>Speciell sponsor</h3>
   <% var specialSponsor = theme.special_sponsors[0]; %>
   <a href="<%- specialSponsor.url %>" target="_blank">
     <img src="<%- url_for(`/images/${specialSponsor.img}`) %>" style="width:160px" alt="Code.xyz Logo">
@@ -53,9 +53,9 @@
     <div class="point">
       <h2>Effektivt</h2>
       <p>
-        20KB min+gzip Runtime<br>
-        Otroligt Snabb Virtual DOM<br>
-        Minimala Optimeringsbehov
+        20KB min+gzip runtime<br>
+        Otroligt snabb virtual DOM<br>
+        Minimala optimeringsbehov
       </p>
     </div>
   </div>
