--- a/themes/vue/layout/partials/platinum_sponsors.ejs
+++ b/themes/vue/layout/partials/platinum_sponsors.ejs
@@ -1,6 +1,6 @@
 <div id="sidebar-sponsors-platinum-<%- context %>">
   <div class="main-sponsor">
-    <span>Platinum Sponsorer</span>
+    <span>Platinum-sponsorer</span>
     <div>
     <%_ for (const sponsor of theme.platinum_sponsors) {_%>
     <a href="<%- sponsor.url %>" target="_blank" class="logo">
@@ -10,6 +10,6 @@
     </div>
   </div>
   <a class="become-backer" href="<%- url_for("/support-vuejs") %>">
-    Bli Sponsor
+    Bli sponsor
   </a>
 </div>
