--- a/themes/vue/layout/partials/support_vue_dropdown.ejs
+++ b/themes/vue/layout/partials/support_vue_dropdown.ejs
@@ -3,8 +3,8 @@
   <ul class="nav-dropdown">
     <li><ul>
       <li><a href="/support-vuejs/#One-time-Donations" class="nav-link">Engångsdonationer</a></li>
-      <li><a href="/support-vuejs/#Recurring-Pledges" class="nav-link">Återkommande Löften</a></li>
-      <li><a href="https://vue.threadless.com" target="_blank" class="nav-link">T-Shirt Butik</a></li>
+      <li><a href="/support-vuejs/#Recurring-Pledges" class="nav-link">Återkommande löften</a></li>
+      <li><a href="https://vue.threadless.com" target="_blank" class="nav-link">T-Shirt butik</a></li>
     </ul></li>
   </ul>
 </li>
