--- a/themes/vue/layout/partials/toc.ejs
+++ b/themes/vue/layout/partials/toc.ejs
@@ -12,19 +12,19 @@
         <li><h3>Transitioner & Animationer</h3></li>
       <% } %>
       <% if (fileName === 'mixins') { %>
-        <li><h3>Återanvändbarhet & Composition</h3></li>
+        <li><h3>Återanvändbarhet & Komposition</h3></li>
       <% } %>
       <% if (fileName === 'single-file-components') { %>
         <li><h3>Verktyg</h3></li>
       <% } %>
       <% if (fileName === 'routing') { %>
-        <li><h3>Scaling Up</h3></li>
+        <li><h3>Uppskalning</h3></li>
       <% } %>
       <% if (fileName === 'reactivity') { %>
-        <li><h3>Internals</h3></li>
+        <li><h3>Internt</h3></li>
       <% } %>
       <% if (fileName === 'migration') { %>
-        <li><h3>Flyttning</h3></li>
+        <li><h3>Migrering</h3></li>
       <% } %>
       <% if (fileName === 'comparison') { %>
         <li><h3>Meta</h3></li>
